Bug 996982 - Fix Debugger script delazification logic to account for relazified clones. (r=bz)